Adds rental list component, rental detail component,  rental service, and rental model

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <bwm-header> </bwm-header>
-{{componentTitle}}
 
-<router-outlet></router-outlet>
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
